--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
         "dropzone": "^5.7.2",
         "feather-icons": "^4.28.0",
         "highlight.js": "^10.6.0",
+        "jquery": "^3.6.0",
         "js-beautify": "^1.11.0",
         "litepicker": "^2.0.11",
         "pristinejs": "^0.1.9",
+        "select2": "^4.1.0-rc.0",
         "sweetalert2": "^11.1.9",
         "tabulator-tables": "^4.9.1",
         "tiny-slider": "^2.9.3",
