--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-APP_NAME=Laravel
+APP_NAME="PT Cahaya Sukses Plastindo"
+APP_SYSTEM="Door Lock Access & Payroll Systems"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -49,3 +50,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TAZAKA_APP="tazaka_project_dlpaysistem"
+TAZAKA_VERSION=1.0
+TAZAKA_KEY="TZKlock2021"
+TAZAKA_KEY_ABSENCE="RFIDCAM2021"
+TAZAKA_OVERTIME=173
