--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_SYSTEM="Door Lock Access & Payroll Systems"
 APP_ENV=local
 APP_KEY=base64:oZcfB4UN7iqCKPnyBosBRs8ilSovKdpxefZaq7pg5Gs=
 APP_DEBUG=true
-APP_URL=http://192.168.2.66
+APP_URL=http://192.168.43.90
 APP_VERSION=1.0
 
 LOG_CHANNEL=stack
@@ -12,9 +12,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=csp-server
+DB_DATABASE=dlpaysystem_db
 DB_USERNAME=root
-DB_PASSWORD=CSPdatabase2021
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
