Update Schadule Doorlock

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,16 +1,16 @@
 {
-    "/js/app.js": "/js/app.js?id=f7acadd5b93bd4fa3b5b",
-    "/dist/js/ckeditor-classic.js": "/dist/js/ckeditor-classic.js?id=56a102ec3a80169c0cb9",
-    "/dist/js/ckeditor-inline.js": "/dist/js/ckeditor-inline.js?id=0f0da94ea98031ef1298",
-    "/dist/js/ckeditor-balloon.js": "/dist/js/ckeditor-balloon.js?id=3799ebd3b6643ebf9bf2",
-    "/dist/js/ckeditor-balloon-block.js": "/dist/js/ckeditor-balloon-block.js?id=7028594aec2aa162c68a",
-    "/dist/js/ckeditor-document.js": "/dist/js/ckeditor-document.js?id=61cdb1a437fe71c19754",
-    "/js/chart.min.js": "/js/chart.min.js?id=5ec0717d57f0bc2c1e61",
-    "/css/app.css": "/css/app.css?id=be3eda1a789997804457",
-    "/dist/images/200x200.jpg": "/dist/images/200x200.jpg?id=170ccfb21d9df10011d7",
-    "/dist/images/800x800.jpg": "/dist/images/800x800.jpg?id=0649de56d8461a18433e",
-    "/dist/images/error-illustration.svg": "/dist/images/error-illustration.svg?id=9d16eebda054057714e3",
-    "/dist/images/illustration.svg": "/dist/images/illustration.svg?id=c4f6b477162ef73d94a1",
-    "/dist/images/logo.svg": "/dist/images/logo.svg?id=39bb585615e1f1fb1750",
-    "/dist/images/phone-illustration.svg": "/dist/images/phone-illustration.svg?id=bfa9f35c76db26ce5b89"
+    "/js/app.js": "/js/app.js",
+    "/dist/js/ckeditor-classic.js": "/dist/js/ckeditor-classic.js",
+    "/dist/js/ckeditor-inline.js": "/dist/js/ckeditor-inline.js",
+    "/dist/js/ckeditor-balloon.js": "/dist/js/ckeditor-balloon.js",
+    "/dist/js/ckeditor-balloon-block.js": "/dist/js/ckeditor-balloon-block.js",
+    "/dist/js/ckeditor-document.js": "/dist/js/ckeditor-document.js",
+    "/js/chart.min.js": "/js/chart.min.js",
+    "/css/app.css": "/css/app.css",
+    "/dist/images/200x200.jpg": "/dist/images/200x200.jpg",
+    "/dist/images/800x800.jpg": "/dist/images/800x800.jpg",
+    "/dist/images/error-illustration.svg": "/dist/images/error-illustration.svg",
+    "/dist/images/illustration.svg": "/dist/images/illustration.svg",
+    "/dist/images/logo.svg": "/dist/images/logo.svg",
+    "/dist/images/phone-illustration.svg": "/dist/images/phone-illustration.svg"
 }
